# otus_python

./: .gitignore  README.md  pyproject.toml
src/: circle.py  figure.py  rectangle.py  square.py  triangle.py
tests/: test_1.py  test_circle.py  test_figure.py  test_rectangle.py  test_square.py  test_triangle.py
