[tool.poetry]
name = "otus_python"
version = "0.1.0"
description = ""
authors = ["Anna Filippova <anna.filipp@rambler.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.2.5"
selenium = "^4.0.0"
chromedriver = "^2.24.1"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
